--- a/kgk_customisations/kgk_customisations/doctype/reason/reason.json
+++ b/kgk_customisations/kgk_customisations/doctype/reason/reason.json
@@ -1,5 +1,6 @@
 {
  "actions": [],
+ "allow_import": 1,
  "allow_rename": 1,
  "autoname": "field:reason",
  "creation": "2025-09-02 12:00:44.478410",
@@ -19,7 +20,7 @@
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-09-02 12:11:37.348679",
+ "modified": "2025-09-15 12:39:56.620861",
  "modified_by": "Administrator",
  "module": "Kgk Customisations",
  "name": "Reason",
