--- a/kgk_customisations/kgk_customisations/doctype/reason/reason.json
+++ b/kgk_customisations/kgk_customisations/doctype/reason/reason.json
@@ -20,7 +20,7 @@
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-09-15 12:39:56.620861",
+ "modified": "2025-10-28 13:54:09.773191",
  "modified_by": "Administrator",
  "module": "Kgk Customisations",
  "name": "Reason",
@@ -36,6 +36,18 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Fulfillment User",
    "share": 1,
    "write": 1
   }
