--- a/kgk_customisations/kgk_customisations/doctype/laser_approval_user/laser_approval_user.json
+++ b/kgk_customisations/kgk_customisations/doctype/laser_approval_user/laser_approval_user.json
@@ -6,48 +6,35 @@
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "employee_id",
-  "column_break_csyu",
   "employee_name",
-  "column_break_caah",
+  "column_break_rdve",
   "status"
  ],
  "fields": [
   {
-   "fieldname": "column_break_caah",
-   "fieldtype": "Column Break"
-  },
-  {
    "fieldname": "status",
-   "fieldtype": "Select",
+   "fieldtype": "Data",
    "in_list_view": 1,
    "label": "Status",
    "options": "Yes\nNo"
   },
   {
-   "fieldname": "employee_id",
+   "fieldname": "employee_name",
    "fieldtype": "Link",
    "in_list_view": 1,
-   "label": "Employee ID",
-   "options": "Employee"
+   "label": "Employee Name",
+   "options": "Laser Approval User Item"
   },
   {
-   "fieldname": "column_break_csyu",
+   "fieldname": "column_break_rdve",
    "fieldtype": "Column Break"
-  },
-  {
-   "fetch_from": "employee_id.employee_name",
-   "fieldname": "employee_name",
-   "fieldtype": "Data",
-   "in_list_view": 1,
-   "label": "Employee Name"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2026-02-03 09:01:03.182437",
+ "modified": "2026-02-10 16:14:23.747111",
  "modified_by": "Administrator",
  "module": "Kgk Customisations",
  "name": "Laser Approval User",
