--- a/kgk_customisations/kgk_customisations/doctype/laser_approval_user/laser_approval_user.json
+++ b/kgk_customisations/kgk_customisations/doctype/laser_approval_user/laser_approval_user.json
@@ -7,13 +7,15 @@
  "engine": "InnoDB",
  "field_order": [
   "employee_name",
+  "column_break_hhob",
+  "status",
   "column_break_rdve",
-  "status"
+  "remark"
  ],
  "fields": [
   {
    "fieldname": "status",
-   "fieldtype": "Data",
+   "fieldtype": "Select",
    "in_list_view": 1,
    "label": "Status",
    "options": "Yes\nNo"
@@ -28,13 +30,24 @@
   {
    "fieldname": "column_break_rdve",
    "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "column_break_hhob",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "remark",
+   "fieldtype": "Data",
+   "in_list_view": 1,
+   "label": "Remark",
+   "options": "Yes\nNo"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2026-02-10 16:14:23.747111",
+ "modified": "2026-02-10 17:05:42.581553",
  "modified_by": "Administrator",
  "module": "Kgk Customisations",
  "name": "Laser Approval User",
