--- a/kgk_customisations/kgk_customisations/doctype/laser_approval_remark/laser_approval_remark.json
+++ b/kgk_customisations/kgk_customisations/doctype/laser_approval_remark/laser_approval_remark.json
@@ -24,7 +24,7 @@
   },
   {
    "fieldname": "manual_remark",
-   "fieldtype": "Data",
+   "fieldtype": "Small Text",
    "in_list_view": 1,
    "label": "Remark 2"
   }
@@ -33,7 +33,7 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2026-02-12 09:34:04.601674",
+ "modified": "2026-02-13 10:18:03.578845",
  "modified_by": "Administrator",
  "module": "Kgk Customisations",
  "name": "Laser Approval Remark",
